# slm-playground

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  run_asr.py  run_audio_tts.py  run_text.py  run_vl.py
.github/workflows/: security.yml
backend/: __init__.py  rtc.py  server.py  tts_engine.py  vl_engine.py
docs/: acceleration.md  model_survey.md
docs/x-search/: README.md  download-video.md  fetch-x-content.md
frontend/: app.js  index.html  styles.css
scripts/: bench_vlm_transformers.py  build_llamacpp_cuda.sh  hf_model_inventory.py  llamacpp_env.sh
tests/: ui-smoke.spec.js
